[dependencies]
futures-util = "0.3"
log = { workspace = true }
read-progress-stream = "1.0.0"
reqwest = { version = "0.12", features = [ "json", "stream" ] }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", features = [ "fs" ] }
tokio-util = { version = "0.7", features = [ "codec" ] }

[lib]
path = "Source/lib.rs"

[package]
authors = { workspace = true }
description = "Upload files from disk to a remote server over HTTP."
edition = { workspace = true }
license-file = { workspace = true }
name = "tauri-plugin-upload"
rust-version = { workspace = true }
version = "0.0.0"
