[dependencies]
futures-util = "0.3"
log = { version = "0.4.25" }
read-progress-stream = "1.0.0"
reqwest = { version = "0.12", features = [ "json", "stream" ] }
serde = { version = "1.0.217" }
serde_json = { version = "1.0.138" }
tauri = { version = "2.2.5" }
thiserror = { version = "2.0.11" }
tokio = { version = "1", features = [ "fs" ] }
tokio-util = { version = "0.7", features = [ "codec" ] }

[lib]
path = "Source/lib.rs"

[package]
authors = ["Tauri Programme within The Commons Conservancy"]
description = "Upload files from disk to a remote server over HTTP."
edition = "2024"
license-file = "LICENSE"
name = "tauri-plugin-upload-read-only"
rust-version = "1.85.0"
version = "0.0.0"
